Bug #17297 Fix error messages